--- a/vtunsite/vtund.conf
+++ b/vtunsite/vtund.conf
@@ -1,12 +1,12 @@
 #
 # VTun - Virtual Tunnel over TCP/IP network.
-# Copyright (C) 1998-2008  Maxim Krasnyansky <max_mk@yahoo.com>
+# Copyright (C) 1998-2012  Maxim Krasnyansky <max_mk@yahoo.com>
 #
 # Cleanup of English and spelling by 
 #   Ted Rolle <ted@acacia.datacomm.com>
 #
 # Configuration file example
-# vtund.conf,v 1.1.1.2.2.3 2001/08/24 22:48:26 maxk Exp  
+# $Id$
 #
 # 
 # Lines which begin with '#' are comments
@@ -36,6 +36,25 @@
 #
 # -----------
 #   port - Server TCP port number.
+#
+# -----------
+#   bindaddr - Server listen address. Used to force vtund to bind
+# 	to the specific address and port in server mode.
+#    Format:	  
+#       bindaddr {
+#         option .....;
+#       };
+#
+#    'bindaddr' options:
+#
+#    iface - Use interface address as the listen address.
+#    Format:
+#       iface if_name;
+#
+#    addr - Listen address.
+#    Format:
+#       addr ip_address;
+#       addr host_name;
 #
 # -----------
 #   syslog - Syslog facility.
@@ -88,6 +107,19 @@
 #       This option is ignored by the client.
 #
 # -----------
+#    nat_hack - Delay UDP set-up connection until Server or Client sends
+#       a UDP packet, depending on setting.  Useful to work around
+#       routers which use mismatched port numbers for UDP traffic.
+#
+#       'client' - Delay UDP set-up on the client side
+#       'server' - Delay UDP set-up on the server side.
+#	    'no' - Disable the NAT hack on both sides (default).
+#
+# 	Setting 'nat_hack client' on the server or 'nat_hack server'
+# 	on the client is ignored.  Please see the vtund.conf man page 
+#	for more details and security information.
+#
+# -----------
 #    persist - Persist mode. 
 #       'yes' - Reconnect to the server after connection 
 #	      termination. 
@@ -98,12 +130,16 @@
 #    keepalive - Enable 'yes' or disable 'no' connection
 #	keep-alive. Ignored by the client.
 #
+#	May be in the form 'interval:count', where 'interval' is the
+#	period of connection checks and 'count' is the maximum number
+#	of retries. 'yes' is equivalent to '30:4'.
+#
 # -----------
 #    timeout - Connect timeout. 
 #
 # -----------
 #    compress - Enable 'yes' or disable 'no' compression. 
-#	It is also possible to specify method:
+#	It is also possible to specify a method:
 #	   'zlib' - ZLIB compression
 #	   'lzo'  - LZO compression
 #	and level: 
@@ -114,22 +150,27 @@
 # -----------
 #    encrypt - Enable 'yes' or disable 'no' encryption.
 #	It is also possible to specify a method:
-#	   'blowfish128ecb' - Blowfish cipher, 128 bit key, mode ECB
-#	   'blowfish128cbc' - Blowfish cipher, 128 bit key, mode CBC
-#	   'blowfish128cfb' - Blowfish cipher, 128 bit key, mode CFB
-#	   'blowfish128ofb' - Blowfish cipher, 128 bit key, mode OFB
-#	   'blowfish256ecb' - Blowfish cipher, 256 bit key, mode ECB
-#	   'blowfish256cbc' - Blowfish cipher, 256 bit key, mode CBC
-#	   'blowfish256cfb' - Blowfish cipher, 256 bit key, mode CFB
-#	   'blowfish256ofb' - Blowfish cipher, 256 bit key, mode OFB
-#	   'aes128ecb'      - AES cipher, 128 bit key, mode ECB
-#	   'aes128cbc'      - AES cipher, 128 bit key, mode CBC
-#	   'aes128cfb'      - AES cipher, 128 bit key, mode CFB
-#	   'aes128ofb'      - AES cipher, 128 bit key, mode OFB
-#	   'aes256ecb'      - AES cipher, 256 bit key, mode ECB
-#	   'aes256cbc'      - AES cipher, 256 bit key, mode CBC
-#	   'aes256cfb'      - AES cipher, 256 bit key, mode CFB
-#	   'aes256ofb'      - AES cipher, 256 bit key, mode OFB
+#	   'blowfish128ecb'    - Blowfish cipher, 128 bit key, mode ECB
+#	   'blowfish128cbc'    - Blowfish cipher, 128 bit key, mode CBC
+#	   'blowfish128cfb'    - Blowfish cipher, 128 bit key, mode CFB
+#	   'blowfish128ofb'    - Blowfish cipher, 128 bit key, mode OFB
+#	   'blowfish256ecb'    - Blowfish cipher, 256 bit key, mode ECB
+#	   'blowfish256cbc'    - Blowfish cipher, 256 bit key, mode CBC
+#	   'blowfish256cfb'    - Blowfish cipher, 256 bit key, mode CFB
+#	   'blowfish256ofb'    - Blowfish cipher, 256 bit key, mode OFB
+#	   'aes128ecb'         - AES cipher, 128 bit key, mode ECB
+#	   'aes128cbc'         - AES cipher, 128 bit key, mode CBC
+#	   'aes128cfb'         - AES cipher, 128 bit key, mode CFB
+#	   'aes128ofb'         - AES cipher, 128 bit key, mode OFB
+#	   'aes256ecb'         - AES cipher, 256 bit key, mode ECB
+#	   'aes256cbc'         - AES cipher, 256 bit key, mode CBC
+#	   'aes256cfb'         - AES cipher, 256 bit key, mode CFB
+#	   'aes256ofb'         - AES cipher, 256 bit key, mode OFB
+#
+#       A special encryption method is provided for use with clients
+#       running pre-3.0 versions:
+#          'oldblowfish128ecb' - Blowfish cipher, 128bit key, mode ECB
+#
 #	Default method is 'blowfish128ecb'.
 #       Ignored by the client.
 #
@@ -211,7 +252,7 @@
 #
 # -----------
 #    srcaddr - Local (source) address. Used to force vtund to bind
-# 	to the specific address and port.
+# 	to the specific address and port in client mode.
 #    Format:	  
 #       srcaddr {
 #         option .....;
@@ -251,6 +292,7 @@
 #
 options {
   port 5000;		# Listen on this port.
+  bindaddr { iface lo; };   # Listen only on loopback device.
 
   # Syslog facility
   syslog 	daemon;
