--- a/vtund.conf
+++ b/vtund.conf
@@ -1,12 +1,12 @@
 #
 # VTun - Virtual Tunnel over TCP/IP network.
-# Copyright (C) 1998-2001  Maxim Krasnyansky <max_mk@yahoo.com>
+# Copyright (C) 1998-2016  Maxim Krasnyansky <max_mk@yahoo.com>
 #
 # Cleanup of English and spelling by 
 #   Ted Rolle <ted@acacia.datacomm.com>
 #
 # Configuration file example
-# vtund.conf,v 1.1.1.2.2.4.2.4 2006/11/16 04:04:07 mtbishop Exp
+# $Id: vtund.conf,v 1.4.2.7 2016/10/01 21:37:39 mtbishop Exp $
 #
 # 
 # Lines which begin with '#' are comments
@@ -107,6 +107,19 @@
 #       This option is ignored by the client.
 #
 # -----------
+#    nat_hack - Delay UDP set-up connection until Server or Client sends
+#       a UDP packet, depending on setting.  Useful to work around
+#       routers which use mismatched port numbers for UDP traffic.
+#
+#       'client' - Delay UDP set-up on the client side
+#       'server' - Delay UDP set-up on the server side.
+#	    'no' - Disable the NAT hack on both sides (default).
+#
+# 	Setting 'nat_hack client' on the server or 'nat_hack server'
+# 	on the client is ignored.  Please see the vtund.conf man page 
+#	for more details and security information.
+#
+# -----------
 #    persist - Persist mode. 
 #       'yes' - Reconnect to the server after connection 
 #	      termination. 
@@ -117,12 +130,16 @@
 #    keepalive - Enable 'yes' or disable 'no' connection
 #	keep-alive. Ignored by the client.
 #
+#	May be in the form 'interval:count', where 'interval' is the
+#	period of connection checks and 'count' is the maximum number
+#	of retries. 'yes' is equivalent to '30:4'.
+#
 # -----------
 #    timeout - Connect timeout. 
 #
 # -----------
 #    compress - Enable 'yes' or disable 'no' compression. 
-#	It is also possible to specify method:
+#	It is also possible to specify a method:
 #	   'zlib' - ZLIB compression
 #	   'lzo'  - LZO compression
 #	and level: 
@@ -133,22 +150,27 @@
 # -----------
 #    encrypt - Enable 'yes' or disable 'no' encryption.
 #	It is also possible to specify a method:
-#	   'blowfish128ecb' - Blowfish cipher, 128 bit key, mode ECB
-#	   'blowfish128cbc' - Blowfish cipher, 128 bit key, mode CBC
-#	   'blowfish128cfb' - Blowfish cipher, 128 bit key, mode CFB
-#	   'blowfish128ofb' - Blowfish cipher, 128 bit key, mode OFB
-#	   'blowfish256ecb' - Blowfish cipher, 256 bit key, mode ECB
-#	   'blowfish256cbc' - Blowfish cipher, 256 bit key, mode CBC
-#	   'blowfish256cfb' - Blowfish cipher, 256 bit key, mode CFB
-#	   'blowfish256ofb' - Blowfish cipher, 256 bit key, mode OFB
-#	   'aes128ecb'      - AES cipher, 128 bit key, mode ECB
-#	   'aes128cbc'      - AES cipher, 128 bit key, mode CBC
-#	   'aes128cfb'      - AES cipher, 128 bit key, mode CFB
-#	   'aes128ofb'      - AES cipher, 128 bit key, mode OFB
-#	   'aes256ecb'      - AES cipher, 256 bit key, mode ECB
-#	   'aes256cbc'      - AES cipher, 256 bit key, mode CBC
-#	   'aes256cfb'      - AES cipher, 256 bit key, mode CFB
-#	   'aes256ofb'      - AES cipher, 256 bit key, mode OFB
+#	   'blowfish128ecb'    - Blowfish cipher, 128 bit key, mode ECB
+#	   'blowfish128cbc'    - Blowfish cipher, 128 bit key, mode CBC
+#	   'blowfish128cfb'    - Blowfish cipher, 128 bit key, mode CFB
+#	   'blowfish128ofb'    - Blowfish cipher, 128 bit key, mode OFB
+#	   'blowfish256ecb'    - Blowfish cipher, 256 bit key, mode ECB
+#	   'blowfish256cbc'    - Blowfish cipher, 256 bit key, mode CBC
+#	   'blowfish256cfb'    - Blowfish cipher, 256 bit key, mode CFB
+#	   'blowfish256ofb'    - Blowfish cipher, 256 bit key, mode OFB
+#	   'aes128ecb'         - AES cipher, 128 bit key, mode ECB
+#	   'aes128cbc'         - AES cipher, 128 bit key, mode CBC
+#	   'aes128cfb'         - AES cipher, 128 bit key, mode CFB
+#	   'aes128ofb'         - AES cipher, 128 bit key, mode OFB
+#	   'aes256ecb'         - AES cipher, 256 bit key, mode ECB
+#	   'aes256cbc'         - AES cipher, 256 bit key, mode CBC
+#	   'aes256cfb'         - AES cipher, 256 bit key, mode CFB
+#	   'aes256ofb'         - AES cipher, 256 bit key, mode OFB
+#
+#       A special encryption method is provided for use with clients
+#       running pre-3.0 versions:
+#          'oldblowfish128ecb' - Blowfish cipher, 128bit key, mode ECB
+#
 #	Default method is 'blowfish128ecb'.
 #       Ignored by the client.
 #
@@ -205,6 +227,7 @@
 #	      %P - Local TCP or UDP port  
 #	      %a - Remote IP address
 #	      %p - Remote TCP or UDP port
+#	      %h - Host Profile Name in config
 #
 #       wait - Wait for the program termination. 
 #
