--- a/Makefile.in
+++ b/Makefile.in
@@ -21,6 +21,8 @@ CC = @CC@
 CFLAGS = @CFLAGS@ @CPPFLAGS@
 LDFLAGS = @LDFLAGS@ @LIBS@
 
+CARGO = @CARGO@
+STRIP = @STRIP@
 YACC = @YACC@
 YACCFLAGS = -d
 
@@ -34,15 +36,16 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 
 SBIN_DIR = @sbindir@
+LIB_DIR = @libdir@
 BIN_DIR  = @bindir@
 MAN_DIR  = @mandir@
 ETC_DIR  = @sysconfdir@
 VAR_DIR  = @localstatedir@
 
-PID_FILE = ${VAR_DIR}/run/vtund.pid
-CFG_FILE = ${ETC_DIR}/vtund.conf
-STAT_DIR = ${VAR_DIR}/log/vtund
-LOCK_DIR = ${VAR_DIR}/lock/vtund
+PID_FILE = ${VAR_DIR}/run/vtunngd.pid
+CFG_FILE = ${ETC_DIR}/vtunngd.conf
+STAT_DIR = ${VAR_DIR}/log/vtunngd
+LOCK_DIR = ${VAR_DIR}/lock/vtunngd
 
 DEFS = -DVTUN_CONFIG_FILE=\"$(CFG_FILE)\" -DVTUN_PID_FILE=\"$(PID_FILE)\" \
        -DVTUN_STAT_DIR=\"$(STAT_DIR)\" -DVTUN_LOCK_DIR=\"$(LOCK_DIR)\"
@@ -53,13 +56,21 @@ OBJS = main.o cfg_file.tab.o cfg_file.lex.o server.o client.o lib.o \
        tcp_proto.o udp_proto.o \
        linkfd.o lfd_shaper.o lfd_zlib.o lfd_lzo.o lfd_encrypt.o lfd_legacy_encrypt.o
 
+RUSTLIBDIR = -Lrust/linkfd/target/release
+RUSTLIBLNK = -lvtun_linkfd
+RUSTLIB = rust/linkfd/target/release/libvtun_linkfd.so
+RUST_INCLUDES = -I./rust
+
 CONFIGURE_FILES = Makefile config.status config.cache config.h config.log 
 
 %.o: %.c vtun.h lib.h
 	$(CC) $(CFLAGS) $(DEFS) -c $<
 
-vtund: $(OBJS)
-	$(CC) $(CFLAGS) -o vtund $(OBJS) $(LFD_OBJS) $(LDFLAGS)
+vtunngd: $(OBJS) $(RUSTLIB)
+	$(CC) $(CFLAGS) -o vtunngd $(OBJS) $(RUSTLIBLNK) $(LFD_OBJS) $(LDFLAGS) $(RUSTLIBDIR)
+
+$(RUSTLIB):
+	cd rust/linkfd && $(CARGO) build --release
 
 cfg_file.tab.h:
 	$(YACC) $(YACCFLAGS) -b cfg_file cfg_file.y
@@ -73,7 +84,7 @@ depend:
 	makedepend -- $(CFLAGS) -- *.c
 
 clean:
-	rm -f core cfg_file.tab.* cfg_file.lex.* *.o *~ .#* *.bak vtund
+	rm -f core cfg_file.tab.* cfg_file.lex.* *.o *~ .#* *.bak vtunngd rust/linkfd/target/release/libvtun_linkfd.so rust/linkfd/target/release/libvtun_linkfd.rlib
 
 distclean: clean
 	rm -f $(CONFIGURE_FILES)
@@ -81,24 +92,29 @@ distclean: clean
 
 install_man: 
 	$(INSTALL) -d -m 755 $(INSTALL_OWNER) $(DESTDIR)$(MAN_DIR)/man8
-	$(INSTALL) -m 644 $(INSTALL_OWNER) vtund.8 $(DESTDIR)$(MAN_DIR)/man8
+	$(INSTALL) -m 644 $(INSTALL_OWNER) vtunngd.8 $(DESTDIR)$(MAN_DIR)/man8
 	$(INSTALL) -d -m 755 $(INSTALL_OWNER) $(DESTDIR)$(MAN_DIR)/man5
-	$(INSTALL) -m 644 $(INSTALL_OWNER) vtund.conf.5 $(DESTDIR)$(MAN_DIR)/man5
+	$(INSTALL) -m 644 $(INSTALL_OWNER) vtunngd.conf.5 $(DESTDIR)$(MAN_DIR)/man5
 	rm -f $(DESTDIR)$(MAN_DIR)/man8/vtun.8 
-	ln -s vtund.8 $(DESTDIR)$(MAN_DIR)/man8/vtun.8 
+	ln -s vtunngd.8 $(DESTDIR)$(MAN_DIR)/man8/vtun.8
 
 install_config: 
 	$(INSTALL) -d -m 755 $(INSTALL_OWNER) $(DESTDIR)$(ETC_DIR)
-	if [ ! -f $(ETC_DIR)/vtund.conf ]; then \
-	  $(INSTALL) -m 600 $(INSTALL_OWNER) vtund.conf $(DESTDIR)$(ETC_DIR); \
+	if [ ! -f $(ETC_DIR)/vtunngd.conf ]; then \
+	  $(INSTALL) -m 600 $(INSTALL_OWNER) vtunngd.conf $(DESTDIR)$(ETC_DIR); \
 	fi
 
-install: vtund install_config install_man
+install_lib:
+	$(INSTALL) -d -m 755 $(INSTALL_OWNER) $(DESTDIR)$(LIB_DIR)
+	$(INSTALL) -m 755 $(INSTALL_OWNER) $(RUSTLIB) $(DESTDIR)$(LIB_DIR)
+#	$(STRIP) $(DESTDIR)$(LIB_DIR)/libvtun_linkfd.so
+
+install: vtunngd install_config install_man install_lib
 	$(INSTALL) -d -m 755 $(INSTALL_OWNER) $(DESTDIR)$(VAR_DIR)/run
 	$(INSTALL) -d -m 755 $(INSTALL_OWNER) $(DESTDIR)$(STAT_DIR)
 	$(INSTALL) -d -m 755 $(INSTALL_OWNER) $(DESTDIR)$(LOCK_DIR)
 	$(INSTALL) -d -m 755 $(INSTALL_OWNER) $(DESTDIR)$(SBIN_DIR)
-	$(INSTALL) -m 755 $(INSTALL_OWNER) vtund $(DESTDIR)$(SBIN_DIR)
-	$(BIN_DIR)/strip $(DESTDIR)$(SBIN_DIR)/vtund
+	$(INSTALL) -m 755 $(INSTALL_OWNER) vtunngd $(DESTDIR)$(SBIN_DIR)
+#	$(STRIP) $(DESTDIR)$(SBIN_DIR)/vtunngd
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
