Would recommend using legacy, but at least it compiles and runs. There seems to be some issues with it, but not sure whether it is in the C-version or the rust-version.

--- a/rust/linkfd/Cargo.toml
+++ b/rust/linkfd/Cargo.toml
@@ -9,4 +9,5 @@ crate-type = ["rlib", "cdylib"]
 
 [dependencies]
 libc = "0.2"
-openssl = "0.10"  # Modern OpenSSL bindings
+openssl = "0.10"
+once_cell = "1.21.3"  # Modern OpenSSL bindings
