--- a/rust/linkfd/Cargo.toml
+++ b/rust/linkfd/Cargo.toml
@@ -11,3 +11,7 @@ crate-type = ["rlib", "cdylib"]
 libc = "0.2"
 openssl = "0.10"
 once_cell = "1.21.3"  # Modern OpenSSL bindings
+md5 = "0.8.0"
+blowfish = "0.9.1"
+ecb = "0.1.2"
+cipher = "0.4.4"
