--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,6 +11,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install Dependencies
+        run: sudo apt-get update && sudo apt-get install -y liblzo2-dev
+
       - name: Create Release Tarball
         run: |
           chmod +x release/release.sh
