Reimplement lfd_zlib in rust.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,4 +8,4 @@ updates:
   - package-ecosystem: "cargo"
     directory: "/rust/linkfd/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
