Reimplement lfd_shaper in rust and fix setproctitle with libbsd on linux.

--- a/config.h.in
+++ b/config.h.in
@@ -54,8 +54,8 @@
 /* Define to 1 if you have setproctitle() function */
 #undef HAVE_SETPROC_TITLE
 
-/* Define to 1 if you want to enable shaper module */
-#undef HAVE_SHAPER
+/* Define to 1 if you have setproctitle_init() function */
+#undef HAVE_SETPROCTITLE_INIT
 
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
