--- a/configure.in
+++ b/configure.in
@@ -10,12 +10,6 @@ dnl
 AC_INIT([vtun],[3]) dnl this needs to change via variables as in the tail
 AC_CONFIG_HEADERS([config.h])
 
-dnl Shapper support
-AC_ARG_ENABLE(shaper,
-   --disable-shaper    	   Don not compile shaper module,
-   SHAPER=$enableval,
-   SHAPER=yes
-)
 dnl SOCKS support
 AC_ARG_ENABLE(socks,
    --enable-socks     	   Compile with SOCKS support,
@@ -81,12 +75,10 @@ AC_SEARCH_LIBS(nanosleep, rt posix4)
 dnl Check for setproctitle in libutil
 AC_SEARCH_LIBS(setproctitle, util bsd, AC_DEFINE(HAVE_SETPROC_TITLE, [1], [Define to 1 if you have setproctitle() function]) )
 
+AC_CHECK_FUNCS([setproctitle_init])
+
 dnl Check for fork() (fallback to vfork() on non-MMU systems)
 AC_FUNC_FORK
-
-if test "$SHAPER" = "yes"; then
-   AC_DEFINE(HAVE_SHAPER, [1], [Define to 1 if you want to enable shaper module])
-fi
 
 if test "$NATHACK" = "yes"; then
    AC_DEFINE(ENABLE_NAT_HACK, [1], [Define to 1 if you want to enable Nat Hack code])
