--- a/Makefile.in
+++ b/Makefile.in
@@ -53,8 +53,7 @@ DEFS = -DVTUN_CONFIG_FILE=\"$(CFG_FILE)\" -DVTUN_PID_FILE=\"$(PID_FILE)\" \
 OBJS = main.o cfg_file.tab.o cfg_file.lex.o server.o client.o lib.o \
        llist.o auth.o tunnel.o lock.o netlib.o  \
        tun_dev.o tap_dev.o pty_dev.o pipe_dev.o \
-       tcp_proto.o udp_proto.o \
-       linkfd.o lfd_shaper.o lfd_zlib.o lfd_lzo.o lfd_encrypt.o lfd_legacy_encrypt.o
+       tcp_proto.o udp_proto.o
 
 RUSTLIBDIR = -Lrust/linkfd/target/release
 RUSTLIBLNK = -lvtun_linkfd
@@ -70,7 +69,9 @@ vtunngd: $(OBJS) $(RUSTLIB)
 	$(CC) $(CFLAGS) -o vtunngd $(OBJS) $(RUSTLIBLNK) $(RUSTLIBDIR) $(LFD_OBJS) $(LDFLAGS)
 
 $(RUSTLIB):
-	cd rust/linkfd && $(CARGO) build --release
+	cd rust/linkfd && env VTUN_STAT_DIR="$(STAT_DIR)" \
+	ENABLE_NAT_HACK="@ENABLE_NAT_HACK@" \
+	$(CARGO) build --release
 
 cfg_file.tab.h:
 	$(BISON) $(BISONFLAGS) -b cfg_file cfg_file.y
