--- a/rust/linkfd/Cargo.toml
+++ b/rust/linkfd/Cargo.toml
@@ -17,3 +17,6 @@ ecb = "0.1.2"
 cipher = "0.4.4"
 rust-lzo = "0.6.2"
 flate2 = "1.1.2"
+signal-hook = "0.3.18"
+time = { version = "0.3.41", features = ["macros", "formatting"] }
+errno = "0.3.13"
