--- a/Makefile.in
+++ b/Makefile.in
@@ -51,7 +51,7 @@ DEFS = -DVTUN_CONFIG_FILE=\"$(CFG_FILE)\" -DVTUN_PID_FILE=\"$(PID_FILE)\" \
        -DVTUN_STAT_DIR=\"$(STAT_DIR)\" -DVTUN_LOCK_DIR=\"$(LOCK_DIR)\"
 
 OBJS = main.o cfg_file.tab.o cfg_file.lex.o server.o client.o lib.o \
-       llist.o auth.o lock.o netlib.o
+       llist.o lock.o netlib.o
 
 RUSTLIBDIR = -Lrust/linkfd/target/release
 RUSTLIBLNK = -lvtun_linkfd
@@ -68,7 +68,8 @@ vtunngd: $(OBJS) $(RUSTLIB)
 
 $(RUSTLIB):
 	cd rust/linkfd && env VTUN_STAT_DIR="$(STAT_DIR)" \
-	ENABLE_NAT_HACK="@ENABLE_NAT_HACK@" \
+	ENABLE_NAT_HACK="@NATHACK_ENABLED@" \
+	VTUN_LOCK_DIR="$(LOCK_DIR)" \
 	$(CARGO) build --release
 
 cfg_file.tab.h:
