Reimplement client func.

--- a/rust/linkfd/Cargo.toml
+++ b/rust/linkfd/Cargo.toml
@@ -19,3 +19,4 @@ flate2 = "1.1.2"
 signal-hook = "0.3.18"
 time = { version = "0.3.41", features = ["macros", "formatting"] }
 errno = "0.3.13"
+dns-lookup = "2.0.4"
