--- a/rust/linkfd/Cargo.toml
+++ b/rust/linkfd/Cargo.toml
@@ -20,3 +20,4 @@ signal-hook = "0.3.18"
 time = { version = "0.3.41", features = ["macros", "formatting"] }
 errno = "0.3.13"
 dns-lookup = "2.0.4"
+logos = "0.15.0"
