Add systemd service.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
-cfg_file.lex.c
-cfg_file.tab.c
-cfg_file.tab.h
-*.o
-configure
-config.status
-config.log
-config.h
-Makefile
-pipe_dev.c
-pty_dev.c
-tap_dev.c
-tcp_proto.c
-tun_dev.c
-udp_proto.c
+.idea/
+autom4te.cache/
+target/
