--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ path = "src/main.rs"
 
 [dependencies]
 libc = "0.2"
-openssl = "0.10"
 md5 = "0.8.0"
 blowfish = "0.9.1"
 ecb = "0.1.2"
@@ -26,3 +25,6 @@ getopts = "0.2.23"
 rand = "0.9.2"
 aes = "0.8.4"
 cbc = "0.1.2"
+cfb-mode = "0.8.2"
+ofb = "0.6.1"
+getrandom = "0.3.3"
