--- a/vtunngd.conf
+++ b/vtunngd.conf
@@ -1,12 +1,12 @@
 #
 # VTun - Virtual Tunnel over TCP/IP network.
 # Copyright (C) 1998-2016  Maxim Krasnyansky <max_mk@yahoo.com>
+# Copyright (C) 2025  Jan-Espen Oversand <sigsegv@radiotube.org>
 #
 # Cleanup of English and spelling by 
 #   Ted Rolle <ted@acacia.datacomm.com>
 #
 # Configuration file example
-# $Id: vtund.conf,v 1.4.2.7 2016/10/01 21:37:39 mtbishop Exp $
 #
 # 
 # Lines which begin with '#' are comments
@@ -288,6 +288,18 @@
 #   at the connection initialization. 
 #
 #   Option names cannot be abbreviated.
+#
+#   Linux tun and ether(tap) devices may fail with input/output
+#   error if the interface has not been configured with ifconfig.
+#   In that case make sure the up commands configure the interface
+#   with wait (for configuration).
+#
+#   Snap:
+#   Configuration is normally expected to be at /etc/vtunngd.conf,
+#   but since snaps are contained you have to put the config file
+#   in place manually.
+#   Ifconfig, route and similar may be available at other locations,
+#   perhaps /snap/sbin/ifconfig instead of /sbin/ifconfig
 #
 # ----- CUT HERE  --- Server config --- CUT HERE -----
 #
