--- a/.github/workflows/snapcraft.yml
+++ b/.github/workflows/snapcraft.yml
@@ -14,7 +14,7 @@ jobs:
         uses: snapcore/action-build@v1     # sets up LXD + snapcraft
 
       - name: Build snap
-        run: snapcraft snap --destructive-mode
+        run: snapcraft
 
       - name: Upload to Snap Store
         env:
