--- a/.github/workflows/snapcraft.yml
+++ b/.github/workflows/snapcraft.yml
@@ -15,12 +15,5 @@ jobs:
 
       - name: Upload to Snap Store
         env:
-          SNAPCRAFT_LOGIN: ${{ secrets.SNAPCRAFT_LOGIN }}
-        run: |
-          # Write secret to a file with safest possible permissions
-          login_file=$(mktemp)
-          echo "$SNAPCRAFT_LOGIN" > "$login_file"
-          chmod 600 "$login_file"
-
-          snapcraft login --with "$login_file"
-          snapcraft upload vtun-ng_*.snap --release=edge
+            SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAPCRAFT_LOGIN }}
+        run: snapcraft upload vtun-ng_*.snap --release=edge
