--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -4,7 +4,7 @@ version: '3.0.19'
 summary: vtun-ng simple IP-tunneling solution
 description: vtun-ng is a simple IP-tunneling solution compatible with vtun
 
-grade: devel
+grade: stable
 confinement: strict
 
 apps:
