--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           flatpak-builder \
             --user --disable-rofiles-fuse \
-            --frozen --offline \
+            --offline \
             --repo=repo build-dir "${MANIFEST}"
 
       - name: Create bundle
