--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -24,6 +24,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -y install flatpak flatpak-builder python3
+          flatpak install --user -y org.freedesktop.Sdk/x86_64/23.08
+          flatpak install --user -y org.freedesktop.Platform/x86_64/23.08
+          flatpak install --user -y org.freedesktop.Sdk.Extension.rust-stable/x86_64/23.08
 
       - name: Build with flatpak-builder
         run: |
