--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -y install flatpak flatpak-builder python3
-          flatpak remote-add --if-not-exists \
+          flatpak remote-add --user --if-not-exists \
                  flathub https://dl.flathub.org/repo/flathub.flatpakrepo
           flatpak install --user -y org.freedesktop.Sdk/x86_64/23.08
           flatpak install --user -y org.freedesktop.Platform/x86_64/23.08
