--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -48,6 +48,6 @@ jobs:
       - name: Upload .flatpak to release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: "${{ VERSION }}"
+          tag_name: "v${{ VERSION }}"
           files: |
             "${{ APP_ID }}-${{ VERSION }}.flatpak"
