Experimental new bidirectional auth.

--- a/vtunngd.conf
+++ b/vtunngd.conf
@@ -301,6 +301,26 @@
 #   Ifconfig, route and similar may be available at other locations,
 #   perhaps /snap/sbin/ifconfig instead of /sbin/ifconfig
 #
+#   Experimental features:
+#
+#   The 3.1-protocol is experimental. New features might be
+#   available, including:
+#    - Bidirectional auth based on sha256 and aes
+#
+#   To enable the 3.1-protocol in server mode add:
+#   options {
+#       experimental yes;
+#   }
+#
+#   To enable the 3.1-protocol in client mode add the
+#   experimental flag to the host config:
+#   your-host-conf {
+#       experimental yes;
+#   }
+#   alternatively to enable it by default for all hosts:
+#   default {
+#       experimental yes;
+#   }
 # ----- CUT HERE  --- Server config --- CUT HERE -----
 #
 options {
