Make dropcaps configureable.

--- a/vtunngd.conf
+++ b/vtunngd.conf
@@ -321,6 +321,15 @@
 #   default {
 #       experimental yes;
 #   }
+#
+#   Use 'hardening dropcaps' drop kernel capabilities when communicating
+#   over external network. This requires the processes to fork a lot
+#   more, and while it reduces the severity of RCE breaches, it might
+#   make the server more susceptible to denial of service due to the
+#   slight performance impact:
+#   options {
+#       hardening dropcaps;
+#   }
 # ----- CUT HERE  --- Server config --- CUT HERE -----
 #
 options {
@@ -336,6 +345,10 @@ options {
   route 	/sbin/route;
   firewall 	/sbin/ipchains;
   ip		/sbin/ip;
+
+  # Experimental features:
+  # experimental yes;
+  # hardening dropcaps;
 }
 
 # Default session options 
