Configureable setuid, setgid hardening.

--- a/vtunngd.conf
+++ b/vtunngd.conf
@@ -328,7 +328,7 @@
 #   make the server more susceptible to denial of service due to the
 #   slight performance impact:
 #   options {
-#       hardening dropcaps;
+#       hardening dropcaps setuid;
 #   }
 # ----- CUT HERE  --- Server config --- CUT HERE -----
 #
@@ -348,7 +348,15 @@ options {
 
   # Experimental features:
   # experimental yes;
+  # Drop capabilities when reading external network:
   # hardening dropcaps;
+  # Both drop capabilities and set the uid to something else than root:
+  # hardening dropcaps setuid setgid;
+  # To set the user id or group id for the hardening features:
+  # setuid nobody;
+  # setuid 65534;
+  # setgid nobody;
+  # setgid 65534;
 }
 
 # Default session options 
