Docs and alert about 'requires' and 'accept_encrypt' being experimental.

--- a/vtunngd.conf
+++ b/vtunngd.conf
@@ -330,6 +330,13 @@
 #   options {
 #       hardening dropcaps setuid;
 #   }
+#
+#   Experimental secutiry settings for client:
+#   your-host-conf-or-default {
+#       requires "3.1" encryption integrity;
+#       accept_encrypt aes128gcm;
+#       accept_encrypt aes256gcm;
+#   }
 # ----- CUT HERE  --- Server config --- CUT HERE -----
 #
 options {
