--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,20 @@ edition = "2021"
 name = "vtunngd"
 path = "src/main.rs"
 
+[features]
+default = ["lzo", "zlib"]
+
+lzo=["dep:rust-lzo"]
+zlib=["dep:flate2"]
+
 [dependencies]
 libc = "0.2"
 md5 = "0.8.0"
 blowfish = "0.9.1"
 ecb = "0.1.2"
 cipher = "0.4.4"
-rust-lzo = "0.6.2"
-flate2 = "1.1.2"
+rust-lzo = { version = "0.6.2", optional = true }
+flate2 = {  version = "1.1.2", optional = true }
 signal-hook = "0.3.18"
 time = { version = "0.3.41", features = ["macros", "formatting"] }
 errno = "0.3.13"
