Hardening is available in client mode as well (docs).

--- a/vtunngd.conf
+++ b/vtunngd.conf
@@ -504,6 +504,18 @@ options {
   route		/sbin/route;
   firewall	/sbin/ipchains;
   ip		/sbin/ip;
+
+  # Experimental features:
+  # experimental yes;
+  # Drop capabilities when reading external network:
+  # hardening dropcaps;
+  # Both drop capabilities and set the uid to something else than root:
+  # hardening dropcaps setuid setgid;
+  # To set the user id or group id for the hardening features:
+  # setuid nobody;
+  # setuid 65534;
+  # setgid nobody;
+  # setgid 65534;
 }
 
 # TUN example. Session 'cobra'. 
