Improve documentation of the requires options.

--- a/vtunngd.conf
+++ b/vtunngd.conf
@@ -333,10 +333,18 @@
 #
 #   Experimental secutiry settings for client:
 #   your-host-conf-or-default {
+#       requires client bidirauth encryption integrity;
 #       requires "3.1" encryption integrity;
 #       accept_encrypt aes128gcm;
 #       accept_encrypt aes256gcm;
 #   }
+#
+#   Explanation for each requires feature:
+#    - client - use config only for client mode, do not expose as server (-s)
+#    - bidirauth - require bidirectional auth, effectively same as "3.1"
+#    - "3.1" - require protocol version 3.1, effectively same as bidirauth
+#    - encryption - require the connection to be encrypted
+#    - integrity - require the message integrity to be protected
 # ----- CUT HERE  --- Server config --- CUT HERE -----
 #
 options {
@@ -516,6 +524,16 @@ options {
   # setuid 65534;
   # setgid nobody;
   # setgid 65534;
+  #
+  # To set requirements for the connection to be accepted:
+  # requires client bidirauth "3.1" encryption integrity;
+  # Explanation for each requires feature:
+  #  - client - use config only for client mode, do not expose as server (-s)
+  #  - bidirauth - require bidirectional auth, effectively same as "3.1"
+  #  - "3.1" - require protocol version 3.1, effectively same as bidirauth
+  #  - encryption - require the connection to be encrypted
+  #  - integrity - require the message integrity to be protected
+  #
 }
 
 # TUN example. Session 'cobra'. 
