--- a/vtunngd.conf
+++ b/vtunngd.conf
@@ -534,6 +534,11 @@ options {
   #  - encryption - require the connection to be encrypted
   #  - integrity - require the message integrity to be protected
   #
+  # The server decides which cipher to use for the connection.
+  # To allowlist acceptable ciphers and hence reject any that are
+  # not explicitly listed:
+  # accept_encrypt aes128gcm;
+  # accept_encrypt aes256gcm;
 }
 
 # TUN example. Session 'cobra'. 
