Try to publish flatpak with the publishing of the release.

--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -1,9 +1,8 @@
 name: Build & Upload Flatpak
 
 on:
-  push:
-    tags:
-      - 'flatp*'
+  release:
+    types: [published]
 
 permissions:
   contents: write
@@ -14,7 +13,7 @@ jobs:
 
     env:
       APP_ID: org.radiotube.vtun-ng
-      VERSION: 3.0.22
+      VERSION: ${{ github.event.release.tag_name }}
       MANIFEST: flatpak/flatpak.json
       ARCH: x86_64
       RUNTIME_VER: 23.08
@@ -22,6 +21,8 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.release.tag_name }}
 
       - name: Install Flatpak tooling
         run: |
@@ -48,6 +49,5 @@ jobs:
       - name: Upload .flatpak to release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: "v${{ env.VERSION}}"
           files: |
             ${{ env.APP_ID }}-${{ env.VERSION }}.flatpak
